currency-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-demo-deploy
spec:
  replicas: 3
  minReadySeconds: 10
  selector:
    matchLabels:
      app: currency-demo
  template:
    metadata:
      labels:
        app: currency-demo
    spec:
      containers:
      - image: byckg3/currency-demo
        name: currency-demo-ctr
        ports:
        - name: http-port
          containerPort: 8080
        readinessProbe:
          periodSeconds: 1
          initialDelaySeconds: 5
          httpGet:
            path: /currencies
            port: http-port
        # livenessProbe:
        #   httpGet:
        #     path: /currencies
        #     port: http-port
        #   initialDelaySeconds: 15
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: currency-demo-svc
spec:
  type: LoadBalancer
  selector:
    app: currency-demo
  ports:
  - port: 80
    targetPort: http-port
