currency-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: currency-demo-svc
spec:
  type: NodePort
  selector:
    app: currency-demo
  ports:
  - port: 80
    targetPort: demo-http-port
